force-app/main/default/objects/Project_Line_Item__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <label>Amount</label>
    <summarizedField>Project_Assigned_Resource__c.Current_Hours__c</summarizedField>
    <summaryForeignKey>Project_Assigned_Resource__c.Project_Line_Item__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>