force-app/main/default/objects/Project_Line_Item__c/fields/Assigned_Amount__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Amount__c</fullName>
    <description>The cost of the resources currently assigned to this Project Line Item</description>
    <label>Assigned Amount</label>
    <summarizedField>Project_Assigned_Resource__c.Assigned_Amount__c</summarizedField>
    <summaryForeignKey>Project_Assigned_Resource__c.Project_Line_Item__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>