force-app/main/default/objects/Project_Line_Item__c/fields/Assigned_Hours__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Hours__c</fullName>
    <label>Assigned_Hours</label>
    <summarizedField>Project_Assigned_Resource__c.Assigned_Hour__c</summarizedField>
    <summaryForeignKey>Project_Assigned_Resource__c.Project_Line_Item__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>