force-app/main/default/objects/Project_Line_Item__c/listViews/MyProjectLineItems.listView-meta.xml
<ListView>
    <fullName>MyProjectLineItems</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>MyProjectLineItems</label>
</ListView>